# vector_esp_fw

./: .gitignore  CMakeLists.txt  flash_cmd.txt  partitions.csv  release.bat  sdkconfig
backup/pmods/ADS7142/: ADS7142.c  ADS7142.h
backup/pmods/FXOS8700CQ/: FXOS8700CQ.c  FXOS8700CQ.h
backup/pmods/IADC/: iadc.c  iadc.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h  main.org.c
main/hal/: butils.h
main/hal/bble/: bble.c  bble.h
main/hal/bfs/: bfs.c  bfs.h
main/hal/bi2c/: bi2c.c  bi2c.h  hard_i2c_lib.c  hard_i2c_lib.h  soft_i2c_lib.c  soft_i2c_lib.h  soft_i2c_lib_def.h
main/hal/bi2s/: bi2s.c  bi2s.h
main/hal/brgb/: brgb.c  brgb.h  led_strip_rmt_ws2812.c
main/hal/lpi2c/: ulp_lp_core_i2c.c
main/lib/baudio/: baudio_codec.h  baudio_codec_tlv320aic3120.c
main/lib/bhaptic/: bhaptic.c  bhaptic.h
main/lib/bioexp/: bioexp.c  bioexp.h
main/lib/pmods/: pmods.c  pmods.h
main/lib/pmods/adxl346/: adxl346.c  adxl346.h
main/lib/pmods/ina219/: ina219.c  ina219.h
main/lib/pmods/kmx61/: kmx61.c  kmx61.h
main/lib/pmods/mlx90640/: mlx90640.c  mlx90640.h  mlx90640_api.c  mlx90640_api.h  mlx90640_i2c_driver.c  mlx90640_i2c_driver.h
main/lib/pmods/si7006/: si7006.c  si7006.h
main/lib/pmods/vl53l0x/: vl53l0x.c  vl53l0x.h  vl53l0x_driver.c  vl53l0x_driver.h
main/mod/ble/: ble_lib.c  ble_lib.h  ble_mod.c  ble_mod.h  ble_proto_def.h
main/mod/daq/: daq_mod.c  daq_mod.h
main/mod/sys/: sys_mod.c  sys_mod.h
main/utils/: sll_listeners.h  util_macro.h
